Hw3/homework3Parser.py
# Generated from C:/Users/persianNB/Desktop/CompilerDesign/Hw3/homework3.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class homework3Parser ( Parser ):

    grammarFileName = "homework3.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [  ]

    symbolicNames = [ "<INVALID>", "EMAIL", "NATIONALNUMBER", "POSTALCODE", 
                      "FLOAT", "VERSION", "URLADDRESS", "DIGIT", "WS" ]

    RULE_start = 0
    RULE_email = 1
    RULE_nationalNum = 2
    RULE_postalCode = 3
    RULE_float = 4
    RULE_versionOfSFTW = 5
    RULE_url = 6

    ruleNames =  [ "start", "email", "nationalNum", "postalCode", "float", 
                   "versionOfSFTW", "url" ]

    EOF = Token.EOF
    EMAIL=1
    NATIONALNUMBER=2
    POSTALCODE=3
    FLOAT=4
    VERSION=5
    URLADDRESS=6
    DIGIT=7
    WS=8

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(homework3Parser.EOF, 0)

        def email(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(homework3Parser.EmailContext)
            else:
                return self.getTypedRuleContext(homework3Parser.EmailContext,i)


        def nationalNum(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(homework3Parser.NationalNumContext)
            else:
                return self.getTypedRuleContext(homework3Parser.NationalNumContext,i)


        def postalCode(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(homework3Parser.PostalCodeContext)
            else:
                return self.getTypedRuleContext(homework3Parser.PostalCodeContext,i)


        def float_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(homework3Parser.FloatContext)
            else:
                return self.getTypedRuleContext(homework3Parser.FloatContext,i)


        def versionOfSFTW(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(homework3Parser.VersionOfSFTWContext)
            else:
                return self.getTypedRuleContext(homework3Parser.VersionOfSFTWContext,i)


        def url(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(homework3Parser.UrlContext)
            else:
                return self.getTypedRuleContext(homework3Parser.UrlContext,i)


        def getRuleIndex(self):
            return homework3Parser.RULE_start




    def start(self):

        localctx = homework3Parser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 14
                    self.email()
                    pass
                elif token in [2]:
                    self.state = 15
                    self.nationalNum()
                    pass
                elif token in [3]:
                    self.state = 16
                    self.postalCode()
                    pass
                elif token in [4]:
                    self.state = 17
                    self.float_()
                    pass
                elif token in [5]:
                    self.state = 18
                    self.versionOfSFTW()
                    pass
                elif token in [6]:
                    self.state = 19
                    self.url()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 22 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 126) != 0)):
                    break

            self.state = 24
            self.match(homework3Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EmailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EMAIL(self):
            return self.getToken(homework3Parser.EMAIL, 0)

        def getRuleIndex(self):
            return homework3Parser.RULE_email




    def email(self):

        localctx = homework3Parser.EmailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_email)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.match(homework3Parser.EMAIL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NationalNumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NATIONALNUMBER(self):
            return self.getToken(homework3Parser.NATIONALNUMBER, 0)

        def getRuleIndex(self):
            return homework3Parser.RULE_nationalNum




    def nationalNum(self):

        localctx = homework3Parser.NationalNumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_nationalNum)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(homework3Parser.NATIONALNUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PostalCodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POSTALCODE(self):
            return self.getToken(homework3Parser.POSTALCODE, 0)

        def getRuleIndex(self):
            return homework3Parser.RULE_postalCode




    def postalCode(self):

        localctx = homework3Parser.PostalCodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_postalCode)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(homework3Parser.POSTALCODE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FloatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(homework3Parser.FLOAT, 0)

        def getRuleIndex(self):
            return homework3Parser.RULE_float




    def float_(self):

        localctx = homework3Parser.FloatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_float)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(homework3Parser.FLOAT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionOfSFTWContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERSION(self):
            return self.getToken(homework3Parser.VERSION, 0)

        def getRuleIndex(self):
            return homework3Parser.RULE_versionOfSFTW




    def versionOfSFTW(self):

        localctx = homework3Parser.VersionOfSFTWContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_versionOfSFTW)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(homework3Parser.VERSION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UrlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def URLADDRESS(self):
            return self.getToken(homework3Parser.URLADDRESS, 0)

        def getRuleIndex(self):
            return homework3Parser.RULE_url




    def url(self):

        localctx = homework3Parser.UrlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_url)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(homework3Parser.URLADDRESS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





